--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
         </tr>
     </table>-->
 
-    <form action="#" method="post">
+   <!-- <form action="#" method="post">
 
         用户名: <input type="text" name="username"/><br/>
         密码: <input type="password" name="password"/><br/>
@@ -53,7 +53,29 @@
         选择文件: <input type="file"/><br/>
         <input type="submit" value="提交"/>
         <input type="reset" value="重置"/>
-    </form>
+    </form>-->
+
+    <ol start="30">
+        <li>苹果</li>
+        <li>菠萝</li>
+        <li>香蕉</li>
+    </ol>
+
+    <ul>
+        <li>苹果</li>
+        <li>菠萝</li>
+        <li>香蕉</li>
+    </ul>
+
+    <a href="http://www.baidu.com" target="_blank">点击</a>
+
+    <select name="province">
+        <option>--请选择--</option>
+        <option>北京</option>
+        <option>上海</option>
+        <option>天津</option>
+    </select>
+<textarea name="text"></textarea>
 
 </body>
 </html>
