--- a/web/register.html
+++ b/web/register.html
@@ -3,6 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>注册</title>
+    <script>
+        function checkUser() {
+            var el = document.getElementById("username");
+            var value = el.value;
+            if(value == ""){
+                alert("请输入用户名!")
+            }
+
+            var pwd = document.getElementById("password").value;
+            var repwd = document.getElementById("repassword").value;
+            if(pwd == "" || repwd == ""){
+                alert("请输入密码或确认密码!")
+            }else if(pwd != repwd){
+                alert("两次密码不一致!")
+            }
+            var email = document.getElementById("email").value;
+            var reg = new RegExp("^[a-z0-9]+([._\\\\-]*[a-z0-9])*@([a-z0-9]+[-a-z0-9]*[a-z0-9]+.){1,63}[a-z0-9]+$");
+            var b = reg.test(email);
+            if(!b){
+                alert("请输入正确的邮箱格式!")
+            }
+        }
+
+    </script>
 </head>
 <body>
     <form action="#" method="get">
@@ -12,21 +36,21 @@
             </tr>
             <tr height="50px">
                 <td>用户名</td>
-                <td><input type="text" placeholder="请输入用户名" maxlength="16" size="30px" name="username" style="height: 40px"/></td>
+                <td><input type="text" placeholder="请输入用户名" maxlength="16" size="30px" name="username" style="height: 40px" id="username"/></td>
             </tr>
             <tr height="50px">
                 <td>密码</td>
-                <td><input type="password" placeholder="请输入密码" maxlength="16" size="30px" style="height: 40px"/></td>
+                <td><input id="password" name="password" type="password" placeholder="请输入密码" maxlength="16" size="30px" style="height: 40px"/></td>
             </tr>
             <tr height="50px">
                 <td>确认密码</td>
-                <td><input type="password" placeholder="请确认密码"
+                <td><input id="repassword" type="password" placeholder="请确认密码"
                            maxlength="16" size="30px" style="height: 40px"/></td>
             </tr>
             <tr height="50px">
                 <td>Email</td>
-                <td><input type="text" placeholder="请输入邮箱"
-                           maxlength="16" size="30px" style="height: 40px"/></td>
+                <td><input id="email" type="text" placeholder="请输入邮箱"
+                           size="30px" style="height: 40px"/></td>
             </tr>
             <tr height="50px">
                 <td>姓名</td>
@@ -42,7 +66,7 @@
                 <td><input type="text" placeholder="请输入验证码" name="code" size="30px" style="height: 40px"/><img src="img/yanzhengma.png"/></td>
             </tr>
             <tr height="50px">
-                <td colspan="2"><input type="submit" value="提交"/></td>
+                <td colspan="2"><input type="submit" value="提交" onclick="checkUser()"/></td>
             </tr>
         </table>
     </form>
