--- a/web/index.html
+++ b/web/index.html
@@ -5,26 +5,38 @@
     <title>第一个web页面</title>
     <!-- 放置CSS，JS，引用包信息等-->
 <!--    <script src="js/test.js" rel="script" type="text/javascript"></script>-->
+    <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
     <script>
-        var str = "10";
+
+        /*window.onload = function () {
+            alert("张三");
+        };*/
+        $(function () {
+            //alert("张三");
+            $("#span1").html($("#span1").html() + ".,.dskdjs");
+
+        });
+
+
+      /*  var str = "10";
         var b = true;
         var i = 10;
         var interval;
         window.onload = function () {
-            /*if(str === i){
+            /!*if(str === i){
                 alert("相等")
             }else{
                 alert("不相等")
-            }*/
+            }*!/
             //alert(document.getElementById("span").innerText);
             document.getElementById("span").innerHTML = document.getElementById("span").innerText + "测试innerHTML";
             //document.write("测试写入.....");
-            /*var b = confirm("确定要删除吗?");
+            /!*var b = confirm("确定要删除吗?");
             if(b){
                 alert("确定")
             }else{
                 alert("取消")
-            }*/
+            }*!/
 
             //interval = setInterval("test()" , 2000);
             setTimeout("test()" ,3000 );
@@ -32,7 +44,7 @@
         var i = 0;
         function test() {
             location.href = "http://www.baidu.com"
-        }
+        }*/
 
     </script>
     <style>
@@ -65,7 +77,7 @@
 </head>
 <body>
 <p id="span"> 测试数据</p>
-<span id="span1" ></span>
+<span id="span1" >测试JQ</span>
 <!-- 体 ， 放置界面元素，标签， jsp代码-->
    <!-- <font size="33px" color="red">测试程序</font>
     <h1>测试程序</h1>
@@ -144,7 +156,6 @@
 <div id="div_id2" class="div1" style="height: 100px ;"></div>
 
 <input id="input" type="password" name="password" value="dshjds"/><br/>
-
 
 <input type="button"  value="返回上一个页面" onclick="javascript:history.back()"/>
 <a onclick="javascript:history.forward()" href="">返回</a>
