--- a/web/home.html
+++ b/web/home.html
@@ -33,6 +33,10 @@
       }
     </script>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         div#content{
             width: 1119px;
             height: 2000px;
@@ -74,13 +78,40 @@
             height: 236px;
             float: left;
         }
+
+        div#left_1{
+            width: 209px;
+            height: 475px;
+            float: left;
+        }
+        div#right_1{
+            width: 363px;
+            height: 236px;
+            float: left;
+        }
         div.goods{
             width: 180px;
             height: 236px;
             float: left;
             text-align: center;
         }
-
+        div#div_ad{
+            width: 1119px;
+            margin: 0 auto;
+        }
+        #div_ad_1{
+            width: 1119px;
+            margin: 0 auto;
+        }
+        div#div_1{
+            text-align: center;
+        }
+        ul{
+            text-align: center;
+        }
+        ul li{
+            display: inline-block;
+        }
 
     </style>
 </head>
@@ -165,6 +196,98 @@
                 <p><a href="#"><font color="gray">豆浆机</font></a></p>
                 <p><font color="red">¥ 499</font></p>
             </div>
+        </div>
+
+        <div id="div_ad">
+            <img src="img/ad.jpg" width="100%"/>
+        </div>
+
+        <div id="goodsList_1">
+            <div id="left_1">
+                <img src="img/big01.jpg" />
+            </div>
+            <div id="right_1">
+                <img src="img/middle01.jpg" width="100%" height="100%"/>
+            </div>
+            <div class="goods">
+                <img src="img/small01.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+            <div class="goods">
+                <img src="img/small02.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+            <div class="goods">
+                <img src="img/small03.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+            <div class="goods">
+                <img src="img/small04.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+            <div class="goods">
+                <img src="img/small05.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+            <div class="goods">
+                <img src="img/small06.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+            <div class="goods">
+                <img src="img/small07.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+            <div class="goods">
+                <img src="img/small08.jpg" />
+                <p><a href="#"><font color="gray">豆浆机</font></a></p>
+                <p><font color="red">¥ 499</font></p>
+            </div>
+        </div>
+
+        <div id="div_ad_1">
+            <img src="img/footer.jpg" width="100%"/>
+        </div>
+        <div id="div_1" style="width: 1119px ; height: 30px; text-align: center;">
+
+          <!--
+            <a href="#">关于我们&nbsp;&nbsp;</a>
+            <a href="#">关于我们&nbsp;&nbsp;</a>
+            <a href="#">关于我们&nbsp;&nbsp;</a>
+            <a href="#">关于我们&nbsp;&nbsp;</a>
+            <a href="#">关于我们&nbsp;&nbsp;</a>
+            <a href="#">关于我们&nbsp;&nbsp;</a>-->
+            <ul style="margin: 0; list-style: none">
+                <li >
+                    <a href="#">关于我们&nbsp;&nbsp;</a>
+                </li>
+                <li>
+                    <a href="#">关于我们&nbsp;&nbsp;</a>
+                </li>
+                <li>
+                    <a href="#">关于我们&nbsp;&nbsp;</a>
+                </li>
+                <li>
+                    <a href="#">关于我们&nbsp;&nbsp;</a>
+                </li>
+                <li>
+                    <a href="#">关于我们&nbsp;&nbsp;</a>
+                </li>
+                <li>
+                    <a href="#">关于我们&nbsp;&nbsp;</a>
+                </li>
+            </ul>
+        </div>
+
+        <div style="width: 1119px ; height: 30px; text-align: center;">
+
+            <span>CopyRight @ 2019-2020 唯创网讯 版权所有</span>
         </div>
     </div>
 
