--- a/web/register.html
+++ b/web/register.html
@@ -45,7 +45,7 @@
     </script>
 </head>
 <body>
-    <form action="#" method="get" onsubmit="checkUser2()">
+    <form  method="post" action="/Loginservlet" onsubmit="checkUser2()">
         <table width="600px" height="500px" align="center" border="1px" cellpadding="0px" cellspacing="0px">
             <tr height="50px">
                 <td colspan="2"><font size="3">会员注册</font>&nbsp;&nbsp;&nbsp;USER REGISTER</td>
