--- a/web/register.html
+++ b/web/register.html
@@ -45,20 +45,21 @@
     </script>
 </head>
 <body>
-    <form  method="post" action="/Loginservlet" onsubmit="checkUser2()">
+<!--    <a href="/requestServlet1">奥运会一共取得32块金牌</a>-->
+    <form  method="post" action="/registerServlet" onsubmit="checkUser2()">
         <table width="600px" height="500px" align="center" border="1px" cellpadding="0px" cellspacing="0px">
             <tr height="50px">
                 <td colspan="2"><font size="3">会员注册</font>&nbsp;&nbsp;&nbsp;USER REGISTER</td>
             </tr>
             <tr height="50px">
                 <td>用户名</td>
-                <td><input type="text" placeholder="请输入用户名" maxlength="16" size="30px" name="username" style="height: 40px" id="username" onfocus="userNameFocus()" onblur="userNameBlur()"/>
+                <td><input type="text" placeholder="请输入用户名" maxlength="16" size="30px" name="uname" style="height: 40px" id="username" onfocus="userNameFocus()" onblur="userNameBlur()"/>
                 <span id="userSpan"></span>
                 </td>
             </tr>
             <tr height="50px">
                 <td>密码</td>
-                <td><input id="password" name="password" type="password" placeholder="请输入密码" maxlength="16" size="30px" style="height: 40px"/></td>
+                <td><input id="password" name="upassword" type="password" placeholder="请输入密码" maxlength="16" size="30px" style="height: 40px"/></td>
             </tr>
             <tr height="50px">
                 <td>确认密码</td>
@@ -67,17 +68,16 @@
             </tr>
             <tr height="50px">
                 <td>Email</td>
-                <td><input id="email" type="text" placeholder="请输入邮箱"
+                <td><input id="email" name="email" type="text" placeholder="请输入邮箱"
                            size="30px" style="height: 40px"/></td>
             </tr>
             <tr height="50px">
-                <td>姓名</td>
-                <td><input type="text" placeholder="请输入姓名"
-                           maxlength="16" size="30px" style="height: 40px"/></td>
+                <td>爱好</td>
+                <td><input type="checkbox" value="lanqiu" name="hobby"/>篮球<input type="checkbox" value="zuqiu" name="hobby"/>足球<input type="checkbox" value="pingpangqiu" name="hobby"/>乒乓球</td>
             </tr>
             <tr height="50px">
                 <td>性别</td>
-                <td><input type="radio" name="sex"/>男<input type="radio" name="sex"/>女</td>
+                <td><input type="radio" name="sex" value="male"/>男<input type="radio" name="sex" value="female"/>女</td>
             </tr>
             <tr height="50px">
                 <td>验证码</td>
